--- a/style.css
+++ b/style.css
@@ -81,9 +81,11 @@ nav ul li a:hover {
 main {
   padding-top: 60px;
 }
-
+#main {
+ padding: 0px;
+}
 section {
-  min-height: 100vh;
+  
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -234,4 +236,59 @@ section.visible {
 .nav-menu a {
   text-decoration: none;
   color: #000;
+}
+
+.slider {
+  position: relative;
+  width: 100vw;
+  height: 20rem;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.slide-container {
+  display: flex;
+  width: 300%;
+  height: 100%;
+  transition: transform 0.5s ease-in-out;
+}
+.slide-container img{
+  width: 100%;
+}
+
+.slide {
+  width: 33.333%;
+  height: 100%;
+  object-fit: contain;
+}
+
+/* 화살표 버튼 스타일 제거 */
+.prev-btn, .next-btn {
+  display: none;
+}
+
+.dots {
+  position: absolute;
+  bottom: 40px;  /* 위치 조정 */
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 15px;
+  z-index: 10;  /* 이미지 위에 표시되도록 */
+}
+
+.dot {
+  width: 12px;
+  height: 12px;
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.dot.active {
+  background: white;
 } 
