--- a/style.css
+++ b/style.css
@@ -241,8 +241,7 @@ section.visible {
 .slider {
   position: relative;
   width: 100%;
-  height: 50vh;
-  
+  height: 400px;
   overflow: hidden;
 }
 
