--- a/style.css
+++ b/style.css
@@ -228,11 +228,13 @@ section.visible {
 .cocktail-slide {
   min-width: 100%;
   text-align: center;
+  border: 1px solid red;
 }
 
 .cocktail-slide img {
-  max-width: 80%;
-  height: 500px;
+  width: 100%;
+  height: 700px;
+  object-fit: cover;
   margin-bottom: 20px;
 }
 
@@ -407,11 +409,11 @@ section.visible {
   }
 
   .cocktail-slider {
-    height: 400px;
+    height: 550px;
   }
 
   .cocktail-slide img {
-    height: 300px;
+    height: 400px;
   }
 
   .cocktail-slide p {
